--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
     />
     <script defer src="/JS/portfolio.js"></script>
+    <script src="/JS/header.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -40,8 +41,13 @@
   <body>
     <header>
       <img class="My-logo" src="/Images/MyLogo.png" alt="" />
+      <img
+        class="hamburger-icon"
+        src="/Images/nav-hamburger-icon.png"
+        alt="drop-down menu"
+      />
       <nav>
-        <ul>
+        <ul class="nav-ul">
           <li><a href="index.html">About Me</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
