--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <script defer src="/JS/portfolio.js"></script>
-    <script src="/JS/header.js"></script>
+    <script defer src="/JS/header.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
