--- a/portfolio.html
+++ b/portfolio.html
@@ -77,9 +77,18 @@
           ></video>
 
           <div class="Project-info">
-            <a href="" class="project-info-link"><h2>Github Repository</h2></a>
-            <a href=""><h2>Github Page</h2></a>
-            <a href=""><h2>Figma Design</h2></a>
+            <a
+              href="https://github.com/lem31/Project-Exam-1"
+              class="project-info-link"
+              ><h2>Github Repository</h2></a
+            >
+            <a href="https://lem31.github.io/Project-Exam-1/"
+              ><h2>Github Page</h2></a
+            >
+            <a
+              href="https://www.figma.com/design/EurWCfCM0TFLQePcjOYgaj/Untitled?node-id=0-1&t=8xLEXoJp5kZsUGXu-1&classId=bbc516b1-3b66-40d2-beb1-b696fd0c5230&assignmentId=fad37400-da12-48cf-9c88-29af15bf77fc&submissionId=6b9a3b1f-1c03-8039-6f22-634a787f8f04"
+              ><h2>Figma Design</h2></a
+            >
             <p class="project-paragraph">Tech used: Javascript, Html and CSS</p>
           </div>
         </div>
@@ -100,9 +109,16 @@
           ></video>
 
           <div class="Project-info">
-            <a href=""><h2>Github Repository</h2></a>
-            <a href=""><h2>Github Page</h2></a>
-            <a href=""><h2>Figma Design</h2></a>
+            <a href="https://github.com/lem31/Project-Semester-1"
+              ><h2>Github Repository</h2></a
+            >
+            <a href="https://lem31.github.io/Project-Semester-1/"
+              ><h2>Github Page</h2></a
+            >
+            <a
+              href="https://www.figma.com/design/Rn0A7Mnnugl6YVwVQHfwg6/Semester-Project-1--HF-Wireframe-and-Style-Guide?node-id=0-1&t=VqqlH0Ofb2C8qVnm-0"
+              ><h2>Figma Design</h2></a
+            >
             <p>Tech used: Html and CSS</p>
           </div>
         </div>
@@ -119,9 +135,16 @@
             src="/Film-project-recording.mov"
           ></video>
           <div class="Project-info">
-            <a href=""><h2>Github Repository</h2></a>
-            <a href=""><h2>Github Page</h2></a>
-            <a href=""><h2>Figma Design</h2></a>
+            <a href="https://github.com/lem31/HTML---CSS-ASSIGNMENT"
+              ><h2>Github Repository</h2></a
+            >
+            <a href="https://lem31.github.io/HTML---CSS-ASSIGNMENT/"
+              ><h2>Github Page</h2></a
+            >
+            <a
+              href="https://www.figma.com/design/YNmCKo1BCxVOKKS1IuHsWV/Square-Eyes-Wireframe-Desktop-%2B-Mobile?node-id=0-1&t=d1FS2w7pf6UgjN67-0"
+              ><h2>Figma Design</h2></a
+            >
             <p>Tech used: Html and CSS</p>
           </div>
         </div>
