--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <div class="header-bio-wrap">
         <div class="h1-container">
-          <h1 class="h1 ">LEANNE MEYER</h1>
+          <h1 class="h1 h1-home ">LEANNE MEYER</h1>
         </div>
 
         <div class="bio-wrapper">
