--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <section class="I-enjoy">
         <div id="img-1" class="I-enjoy-box I-enjoy-box-1">
           <button class="x-btn x-btn-1">X</button>
-          <h2 class="I-enjoy-h2">Being Around Animals</h2>
+          <h2 id="dog-video-h2" class="I-enjoy-h2">Being Around Animals</h2>
           <video autoplay loop muted class="dog-img" src="/Images/DogVid.mp4" alt=""></video>
         </div>
         </div>
@@ -115,11 +115,11 @@
         <div class="strengths-box">
           
 
- <h2 id="creative">CREATIVE</h2> 
-          <h2 id="love-to-learn"> LOVE TO LEARN
+ <h2  class="h2-strengths"  id="creative">CREATIVE</h2> 
+          <h2 class="h2-strengths" id="love-to-learn"> LOVE TO LEARN
           </h2>
-          <h2 id= "good-listener">GOOD LISTENER</h2>
-          <h2 id="self-motivated">SELF-MOTIVATED</h2>
+          <h2  class="h2-strengths"  id= "good-listener">GOOD LISTENER</h2>
+          <h2  class="h2-strengths"  id="self-motivated">SELF-MOTIVATED</h2>
         </div>
       </section>
 
@@ -127,12 +127,12 @@
         <button class="x-btn-motivation">X</button>
 <div class="motivation-box">
 
-<h2>Family</h2>
-<h2>Opportunities to help and learn from others</h2>
-<h2>Challenges</h2>
-<h2>Being the best that I can be</h2>
-<h2>Results</h2>
-<h2>Contributing to a mission</h2>
+<h2 class="h2-motivation">Family</h2>
+<h2 class="h2-motivation">Opportunities to help and learn from others</h2>
+<h2 class="h2-motivation">Challenges</h2>
+<h2 class="h2-motivation">Being the best that I can be</h2>
+<h2 class="h2-motivation">Results</h2>
+<h2 class="h2-motivation">Contributing to a mission</h2>
 </div>
         
       </section>
