--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   </head>
   <body>
     <header>
-      <img class="My-logo" src="/Images/MyLogo.png" alt="" />
- <img class="hamburger-icon" src="/Images/nav-hamburger-icon.png" alt="drop-down menu">
+      <img class="My-logo" src="./Images/MyLogo.png" alt="" />
+ <img class="hamburger-icon" src="./Images/nav-hamburger-icon.png" alt="drop-down menu">
       <nav>
         <ul class="nav-ul">
           <li><a href="index.html">About Me</a></li>
@@ -173,8 +173,8 @@
     </main>
 
     <footer>
-      <a href="https://www.linkedin.com/in/leanne-elizabeth-meyer-254858266/"> <img class="linkedin" src="/Images/LinkedinIcon.png" alt=""></a>
-      <a href="https://github.com/lem31"> <img class="Github"src="/Images/GithubIcon.png" alt=""> </a>
+      <a href="https://www.linkedin.com/in/leanne-elizabeth-meyer-254858266/"> <img class="linkedin" src="./Images/LinkedinIcon.png" alt=""></a>
+      <a href="https://github.com/lem31"> <img class="Github"src="./Images/GithubIcon.png" alt=""> </a>
        
        </footer>
 
