--- a/portfolio.html
+++ b/portfolio.html
@@ -40,10 +40,10 @@
   </head>
   <body>
     <header>
-      <img class="My-logo" src="/Images/MyLogo.png" alt="" />
+      <img class="My-logo" src="./Images/MyLogo.png" alt="" />
       <img
         class="hamburger-icon"
-        src="/Images/nav-hamburger-icon.png"
+        src="./Images/nav-hamburger-icon.png"
         alt="drop-down menu"
       />
       <nav>
@@ -153,10 +153,10 @@
 
     <footer>
       <a href="https://www.linkedin.com/in/leanne-elizabeth-meyer-254858266/">
-        <img class="linkedin" src="/Images/LinkedinIcon.png" alt=""
+        <img class="linkedin" src="./Images/LinkedinIcon.png" alt=""
       /></a>
       <a href="https://github.com/lem31">
-        <img class="Github" src="/Images/GithubIcon.png" alt="" />
+        <img class="Github" src="./Images/GithubIcon.png" alt="" />
       </a>
     </footer>
   </body>
