--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
       name="description"
       content="See some of Leanne Meyer's latest work "
     />
-    <link rel="icon" type="image/x-icon" href="/Images/MyLogo.png" />
+    <link rel="icon" type="image/x-icon" href="./Images/MyLogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,8 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/JS/portfolio.js"></script>
-    <script defer src="/JS/header.js"></script>
+    <script defer src="./JS/portfolio.js"></script>
+    <script defer src="./JS/header.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -66,7 +66,7 @@
 
           <img
             class="snow-v-cays-img project-img"
-            src="Images/Screenshot-Snow-V-Cays.png"
+            src="./Images/Screenshot-Snow-V-Cays.png"
             alt=""
           />
 
@@ -99,7 +99,7 @@
           </div>
           <img
             class="museum-img project-img"
-            src="/Images/Screenshot-Museum.png"
+            src="./Images/Screenshot-Museum.png"
             alt=""
           />
 
@@ -127,7 +127,7 @@
           <h2 class="h2-portfolio Project-title">Film Website</h2>
           <img
             class="Film-site-img project-img"
-            src="/Images/Screenshot-Film-Site.png"
+            src="./Images/Screenshot-Film-Site.png"
             alt=""
           />
           <video
