--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 
           <video
             class="snow-v-cays-video project-video"
-            src="/Snow-V-Cays-Screenrec.mp4"
+            src="Snow-V-Cays-Screenrec.mp4"
             controls
           ></video>
 
@@ -105,7 +105,7 @@
 
           <video
             class="museum-video project-video"
-            src="/Museum-Project-Recording.mp4"
+            src="Museum-Project-Recording.mp4"
           ></video>
 
           <div class="Project-info">
@@ -132,7 +132,7 @@
           />
           <video
             class="film-video project-video"
-            src="/Film-project-recording.mov"
+            src="Film-project-recording.mov"
           ></video>
           <div class="Project-info">
             <a href="https://github.com/lem31/HTML---CSS-ASSIGNMENT"
