--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,14 @@
               href="https://www.figma.com/design/EurWCfCM0TFLQePcjOYgaj/Untitled?node-id=0-1&t=8xLEXoJp5kZsUGXu-1&classId=bbc516b1-3b66-40d2-beb1-b696fd0c5230&assignmentId=fad37400-da12-48cf-9c88-29af15bf77fc&submissionId=6b9a3b1f-1c03-8039-6f22-634a787f8f04"
               ><h2>Figma Design</h2></a
             >
-            <p class="project-paragraph">Tech used: Javascript, Html and CSS</p>
+            <h2>Tech Used</h2>
+            <p class="project-paragraph">Javascript, Html and CSS</p>
+            <h2>Description</h2>
+            <p>
+              I designed this project using Figma <br />
+              and then developed a blog post website <br />
+              according to a specific brief.
+            </p>
           </div>
         </div>
 
@@ -119,7 +126,15 @@
               href="https://www.figma.com/design/Rn0A7Mnnugl6YVwVQHfwg6/Semester-Project-1--HF-Wireframe-and-Style-Guide?node-id=0-1&t=VqqlH0Ofb2C8qVnm-0"
               ><h2>Figma Design</h2></a
             >
-            <p>Tech used: Html and CSS</p>
+            <h2>Tech Used</h2>
+            <p>Html and CSS</p>
+
+            <h2>Description</h2>
+            <p>
+              I designed this project using Figma <br />
+              and then developed a Museum website <br />
+              according to a specific brief.
+            </p>
           </div>
         </div>
 
@@ -145,7 +160,16 @@
               href="https://www.figma.com/design/YNmCKo1BCxVOKKS1IuHsWV/Square-Eyes-Wireframe-Desktop-%2B-Mobile?node-id=0-1&t=d1FS2w7pf6UgjN67-0"
               ><h2>Figma Design</h2></a
             >
-            <p>Tech used: Html and CSS</p>
+
+            <h2>Tech Used</h2>
+            <p>Html and CSS</p>
+
+            <h2>Description</h2>
+            <p>
+              I designed this project using Figma <br />
+              and then developed a Museum website <br />
+              according to a specific brief.
+            </p>
           </div>
         </div>
       </section>
