--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
             <h2>Description</h2>
             <p>
               I designed this project using Figma <br />
-              and then developed a Museum website <br />
+              and then developed a Film website <br />
               according to a specific brief.
             </p>
           </div>
