--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 
 
-  <p>Studying Frontend Development at Noroff University <br>
+  <p class="status-p">Studying Frontend Development at Noroff University <br>
 
     Graduation Date: June 2025
     </p>
